tests/errors/declaration.c
void printi(int c);
void printc(char c);
int scani();
int c;

int main(){
    int a,b,c,d;
    void x;
    int a;
    int char y;
    int arr[-10];
    int *ptr;
    return 0;
}

char c;
void foo(int ){
    int x;
    printi(5);
}